--- a/CTA/CustomTeamAssigner/RichTextEditor.xaml
+++ b/CTA/CustomTeamAssigner/RichTextEditor.xaml
@@ -116,6 +116,14 @@
         <TextBox Name="htmlPreview" Grid.Row="6" Grid.RowSpan="3" IsReadOnly="True"
                  VerticalAlignment="Bottom" Margin="10,10,10,0" TextWrapping="Wrap" />
         
-        <Button Name="BackButton" Grid.Row="9" Content="Back" VerticalAlignment="Bottom" HorizontalAlignment="Right" Click="BackButton_Click" />
+        <Button Grid.Row="9" VerticalAlignment="Bottom" HorizontalAlignment="Right" Click="BackButton_Click">
+            <Button.RenderTransform>
+                <ScaleTransform/>
+            </Button.RenderTransform>
+            <StackPanel Orientation="Horizontal">
+                <Image Source="Resources/back.svg" Name="BackButtonImage" Width="30" Height="30" Margin="0,0,15,0"/>
+                <TextBlock Text="Back"/>
+            </StackPanel>
+        </Button>
     </Grid>
 </Page>
